exports[`test Input accepts a label 1`] = `
<div
  className="form-group">
  <label
    htmlFor="foo">
    foo
  </label>
  <input
    className="form-control"
    name={undefined}
    onChange={[Function]}
    placeholder={undefined}
    type="text"
    value="" />
</div>
`;

exports[`test Input accepts an initial value 1`] = `
<div
  className="form-group">
  <label
    htmlFor={undefined} />
  <input
    className="form-control"
    name={undefined}
    onChange={[Function]}
    placeholder={undefined}
    type="text"
    value="foo" />
</div>
`;

exports[`test Input has children 1`] = `
<div
  className="form-group">
  <label
    htmlFor={undefined} />
  <input
    className="form-control"
    name={undefined}
    onChange={[Function]}
    placeholder={undefined}
    type="text"
    value="" />
</div>
`;

exports[`test Input has className form-group 1`] = `
<div
  className="form-group">
  <label
    htmlFor={undefined} />
  <input
    className="form-control"
    name={undefined}
    onChange={[Function]}
    placeholder={undefined}
    type="text"
    value="" />
</div>
`;

exports[`test Input has prop name 1`] = `
<div
  className="form-group">
  <label
    htmlFor={undefined} />
  <input
    className="form-control"
    name="foo"
    onChange={[Function]}
    placeholder={undefined}
    type="text"
    value="" />
</div>
`;
